--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,7 +76,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 // {productname} 6.4.2 also includes the following bug fixes:
 
-=== When hovering over tree dialog components the moust pointer rendered incorrectly.
+=== When hovering over tree dialog components the mouse pointer rendered incorrectly.
 
 In previous versions of {productname}, when hovering over tree dialog component items, the mouse pointer style rendered incorrectly.
 
