--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -79,7 +79,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 == The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly.
 
-In previous versions of {productname}, the quickbar button handler setup for the Open Source plugin, xref:list.adoc[Lists], was different to the quickbar button handler setup for the Premium plugin, xref:advlist.adoc[Advanced Lists].
+In previous versions of {productname}, the quickbar button handler setup for the Open Source plugin, xref:lists.adoc[Lists], was different to the quickbar button handler setup for the Premium plugin, xref:advlist.adoc[Advanced Lists].
 
 As a consequence, when a {productname} instance included the Advanced Lists Premium plugin, the contextual toolbar did not display button status on the toolbar correctly.
 
