--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,6 +76,15 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} 6.4.2 also includes the following bug fixes:
 
+
+=== Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid, value.
+
+In previous versions of {productname}, when an invalid value was entered into the `fontsizeinput` toolbar component, the value was not parsed and both the value and unit were set to their default values: _0_ and _pt_ respectively. 
+
+As a consequence, entering an invalid value set selected text, or the insertion point, to _0pt_.
+
+In {productname} 6.4.2, if an invalid string is entered in the `fontsizeinput` entry field, the `fontsizeinput` value reverts to the previous, valid, value.
+
 === The `tox-button` and `tox-button-secondary` buttons now support the `hover`, `active`, `focus`, and `disabled` states.
 
 In previous versions of {productname}, the `--enabled` css class for `tox-button` and `tox-button-secondary` was not defined.
@@ -119,6 +128,7 @@ As a consequence, the dropdown menu in this dialog would, in some circumstances,
 To fix this issue {productname} now populates the element with a default value, unless this menu is explicitly configured as empty by the particular {productname} instance’s configuration.
 
 NOTE: this change also addresses xref:6.4.1-release-notes.adoc#known-issues[a known issue] in the xref:a11ychecker.adoc[Accessibility Checker Premium plugin].
+
 
 // [[security-fixes]]
 // == Security fixes
