--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -76,6 +76,11 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} 6.4.2 also includes the following bug fixes:
 
+=== The editor displayed a notification error when it failed to retrieve a blob image uri.
+
+In previous versions of {productname}, when the editor contained an image with an invalid or unreachable blob url, it displayed an error notification banner within the editor viewport which impacted the user experience.
+
+For {productname} 6.4.2 the error notification banner has been removed: the visible broken image icon is notification enough for the end-user.
 
 === Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid, value.
 
