--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -11,14 +11,27 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} 6.4.2 was released for {enterpriseversion} and {cloudname} on Wednesday, May 3^rd^, 2023. These release notes provide an overview of the changes for {productname} 6.4.2:
 
+* xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 * xref:bug-fixes[Bug fixes]
+
+[[accompanying-premium-skins-and-icon-packs-changes]]
+== Accompanying Premium Skins and Icon Packs changes
+
+The {productname} 6.4.2 release includes an accompanying release of the **Premium Skins and Icon Packs**.
+
+=== Premium Skins and Icon Packs
+
+The **Premium Skins and Icon Packs** release includes the following updates:
+
+The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 6.4.2 skin, Oxide.
+
+For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
 
 
 [[bug-fixes]]
 == Bug fixes
 
 {productname} 6.4.2 includes the following bug fixes:
-
 
 === The `quickimage` toolbar button failed to insert images selected from the local computer when running on Google Chrome for macOS. 
 
