--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -6,13 +6,16 @@
 
 include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
+
 [[overview]]
 == Overview
 
 {productname} 6.4.2 was released for {enterpriseversion} and {cloudname} on Wednesday, May 3^rd^, 2023. These release notes provide an overview of the changes for {productname} 6.4.2:
 
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+* xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 * xref:bug-fixes[Bug fixes]
+
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
@@ -26,6 +29,26 @@ The **Premium Skins and Icon Packs** release includes the following updates:
 The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 6.4.2 skin, Oxide.
 
 For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+
+
+[[accompanying-premium-plugin-changes]]
+== Accompanying Premium Plugin changes
+
+The following premium plugin updates were released alongside {productname} 6.4.2.
+
+=== TinyMCE Comments 3.3.2
+
+The {productname} 6.4.2 release includes an accompanying release of the **TinyMCE Comments** premium plugin.
+
+**TinyMCE Comments** 3.3.2 includes the following bug fix:
+
+==== The ‘Comments > Delete all conversations’ menu item was enabled even when no comments were added
+
+In previous versions of {productname}, when the Premium plugin, xref:introduction-to-tiny-comments.adoc[Tiny Comments] was also running, {productname} did not check the state of the comments section.
+
+Consequently, the _Comments > Delete all conversations_ menu item was not disabled even when the comments section was empty.
+
+With this update, when xref:introduction-to-tiny-comments.adoc[Tiny Comments] is running, {productname} checks the comments section state and this menu item is, as expected, disabled when the {productname} comments section contains no comments.
 
 
 [[bug-fixes]]
@@ -109,15 +132,7 @@ To fix this issue {productname} now populates the element with a default value, 
 
 NOTE: this change also addresses xref:6.4.1-release-notes.adoc#known-issues[a known issue] in the xref:a11ychecker.adoc[Accessibility Checker Premium plugin].
 
-=== The ‘Comments > Delete all conversations’ menu item was enabled even when no comments were added
-
-In previous versions of {productname}, if the Premium plugin, xref:introduction-to-tiny-comments.adoc[Tiny Comments] was also running, {productname} did not check the state of the comments section.
-
-Consequently, the _Comments > Delete all conversations_ menu item was not disabled even when the comments section was empty.
-
-With this update, if xref:introduction-to-tiny-comments.adoc[Tiny Comments] is running, {productname} now checks the comments section state and this menu item is now, as expected, disabled when the {productname} comments section contains no comments.
-
-== The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly.
+=== The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly.
 
 In previous versions of {productname}, the quickbar button handler setup for the Open Source plugin, xref:lists.adoc[Lists], was different to the quickbar button handler setup for the Premium plugin, xref:advlist.adoc[Advanced Lists].
 
