--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -56,7 +56,7 @@ With this update, when xref:introduction-to-tiny-comments.adoc[Tiny Comments] is
 
 {productname} 6.4.2 includes the following bug fixes:
 
-=== The `quickimage` toolbar button failed to insert images selected from the local computer when running on Google Chrome for macOS. 
+=== The `quickimage` toolbar button failed to insert images selected from the local computer when running on Google Chrome for macOS
 
 A regression was discovered in {productname} 6.4.0 when the macOS version of Google Chrome was the host browser: the `focusin` editor event occurred before the `change` event for a file input.
 
@@ -64,7 +64,7 @@ As a consequence, although selecting the `quickimage` toolbar button presented t
 
 For this update, the regression has been corrected. In {productname} 6.4.2, local images selected after the `quickimage` button is selected are added to the {productname} document, as expected.
 
-=== When hovering over tree dialog components the mouse pointer rendered incorrectly.
+=== When hovering over tree dialog components the mouse pointer rendered incorrectly
 
 In previous versions of {productname}, when hovering over tree dialog component items, the mouse pointer style rendered incorrectly.
 
@@ -74,13 +74,13 @@ In {productname} 6.4.2, the styles for tree component items have been updated to
 
 NOTE: as of {productname} 6.4.2, tree components are only used as part of the xref:advanced-templates.adoc[Advanced Templates] Premium plugin.
 
-=== The editor displayed a notification error when it failed to retrieve a blob image uri.
+=== The editor displayed a notification error when it failed to retrieve a blob image uri
 
 In previous versions of {productname}, when the editor contained an image with an invalid or unreachable blob url, it displayed an error notification banner within the editor viewport which impacted the user experience.
 
 For {productname} 6.4.2 the error notification banner has been removed: the visible broken image icon is notification enough for the end-user.
 
-=== Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid, value.
+=== Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid value
 
 In previous versions of {productname}, when an invalid value was entered into the `fontsizeinput` toolbar component, the value was not parsed and both the value and unit were set to their default values: _0_ and _pt_ respectively. 
 
@@ -88,7 +88,7 @@ As a consequence, entering an invalid value set selected text, or the insertion 
 
 In {productname} 6.4.2, if an invalid string is entered in the `fontsizeinput` entry field, the `fontsizeinput` value reverts to the previous, valid, value.
 
-=== The `tox-button` and `tox-button-secondary` buttons now support the `hover`, `active`, `focus`, and `disabled` states.
+=== The `tox-button` and `tox-button-secondary` buttons now support the `hover`, `active`, `focus`, and `disabled` states
 
 In previous versions of {productname}, the `--enabled` css class for `tox-button` and `tox-button-secondary` was not defined.
 
@@ -96,7 +96,7 @@ As a consequence, some {productname} toolbar buttons did not render all their po
 
 With this update, the `--enabled` css class has been defined. And {productname} toolbar buttons render all their  possible states as expected when the UI option a button represents is activated.
 
-=== The `urlinput` dialog component would not open the type-ahead dropdown when the input value was reset to an empty string.
+=== The `urlinput` dialog component would not open the type-ahead dropdown when the input value was reset to an empty string
 
 In previous versions of {productname}, a console error was thrown when the _Source_ field of the *Insert Media* dialog was reset.
 
@@ -106,7 +106,7 @@ To fix this issue, the code for the `urlinput` component that is responsible for
 
 As a result, the URL suggestions dropdown list now expands even on the empty _Source_ field. As well, the host browser’s console no longer returns errors.
 
-=== Selection was not correctly scrolled horizontally into view when using the `selection.scrollIntoView` API.
+=== Selection was not correctly scrolled horizontally into view when using the `selection.scrollIntoView` API
 
 In previous versions of {productname}, the `scrollToMarker` function manually calculated how much should be scrolled vertically. The horizontal scroll amount, however, was set to a specific value: left of the marker.
 
@@ -114,7 +114,7 @@ As a consequence, in some circumstances {productname} editor instances did not s
 
 To fix this, instead of manually calculating the vertical and horizontal marker position, {productname} 6.4.2 now uses a native `scrollIntoView` function to keep the marker in the viewport.
 
-=== Tab navigation no longer incorrectly stops at menu buttons within toolbar groups.
+=== Tab navigation no longer incorrectly stops at menu buttons within toolbar groups
 
 In previous versions of {productname}, menu buttons were assigned an internal attribute.
 
@@ -122,7 +122,7 @@ When the More toolbar button — *…* — was opened, and the, now-visible, flo
 
 For this update this internal attribute has been removed and using the Tab key to activate floating toolbar icons progresses through these icons as expected.
 
-=== Redial would, in some circumstances, cause elements to not have an initial value selected when they should have.
+=== Redial would, in some circumstances, cause elements to not have an initial value selected when they should have
 
 In previous versions of {productname}, the host browser did not properly manage switching child elements when the Accessibility Checker dialog was visible.
 
@@ -132,7 +132,7 @@ To fix this issue {productname} now populates the element with a default value, 
 
 NOTE: this change also addresses xref:6.4.1-release-notes.adoc#known-issues[a known issue] in the xref:a11ychecker.adoc[Accessibility Checker Premium plugin].
 
-=== The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly.
+=== The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly
 
 In previous versions of {productname}, the quickbar button handler setup for the Open Source plugin, xref:lists.adoc[Lists], was different to the quickbar button handler setup for the Premium plugin, xref:advlist.adoc[Advanced Lists].
 
