--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -11,13 +11,13 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * The editor displayed a notification error when it failed to retrieve a blob image uri.
 * Tab navigation no longer incorrectly stops at menu buttons within toolbar groups.
 * The `urlinput` dialog component would not open the type-ahead dropdown when the input value was reset to an empty string.
-* Redial would, in some situations, cause select elements not to have an initial value selected when they should have.
-* Fixed the mouse pointer style from a text cursor to a default arrow pointer when hovering over the tree dialog component items.
-* Enabled variant of toggleable `tox-button` and `tox-button--secondary`: it now supports `hover`/`active`/`focus`/`disabled` states.
+* Redial would, in some circumstances, cause elements to not have an initial value selected when they should have.
+* When hovering over tree dialog components the mouse pointer rendered incorrectly.
+* The `tox-button` and `tox-button-secondary` buttons now support the `hover`, `active`, `focus`, and `disabled` states.
 * Setting an invalid unit in the `fontsizeinput` changed it to the default value instead of reverting it to the previous, and valid, value.
 * Selection was not correctly scrolled horizontally into view when using the `selection.scrollIntoView` API.
-* Context toolbars displayed the incorrect status for the `advlist` plugin buttons.
-* The image would not be inserted when the `quickimage` button was used on Chrome.
+* The contextual toolbar displayed the status of Advanced List Premium plugin icons incorrectly.
+* The `quickimage` toolbar button failed to insert images selected from the local computer when running on Google Chrome for macOS.
 
 == 6.4.1 - 2023-03-29
 
