DOC-1969: advlist.adoc
1.`toolbar: ‘bullist numlist’,` added  to basic setup example configuration.

2. include statement pointing to configuration/text_patterns-and-lists.adoc added.

--- a/modules/ROOT/pages/advlist.adoc
+++ b/modules/ROOT/pages/advlist.adoc
@@ -15,8 +15,12 @@ IMPORTANT: The xref:lists.adoc[Lists] (`+lists+`) plugin must be activated for t
 tinymce.init({
   selector: 'textarea', // change this value according to your HTML
   plugins: 'lists advlist'
+  toolbar: 'bullist numlist',
 });
 ----
+
+include::partial$configuration/text_patterns-and-lists.adoc[]
+
 
 == Options
 
