typo correction: s/ReTurn/Return/.
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/partials/configuration/text_patterns.adoc
+++ b/modules/ROOT/partials/configuration/text_patterns.adoc
@@ -158,7 +158,7 @@ Replacement patterns must have the following:
 
 Whether a replacement pattern inserts a block or inline element depends on what the `+replacement+` string is.
 
-NOTE: Replacement patterns are executed on either pressing the *spacebar* or pressing the *ReTurn* or *Enter* key.
+NOTE: Replacement patterns are executed on either pressing the *spacebar* or pressing the *Return* or *Enter* key.
 
 ==== Example: using replacement patterns
 
